--- a/src/retrodoro/static/retrodoro/login.css
+++ b/src/retrodoro/static/retrodoro/login.css
@@ -1,19 +1,23 @@
+@font-face {
+  font-family: 'Retrodoro';
+  src: url("ka1.ttf");
+}
+
 body {
-  background-image: url("LoginBG.jpg");
   background-size: auto;
   display: flex;
   flex-direction: column;
   height: 100%;
   align-items: center;
   justify-content: center;
-  background-color: #d23737;
+  background-color: #1f0042;
   color: white;
 }
 
 .login-card {
   display: flex;
   flex-direction: column;
-  background-color: rgb(219, 170, 106, 0.5);
+  background-color: rgba(255, 255, 255, 0.091);
   border-radius: 5%;
   width: 40%;
   height: 60%;
@@ -24,6 +28,7 @@ body {
   align-items: center;
   justify-content: center;
   flex: 1;
+  font-family: "Retrodoro";
 }
 
 .form-container {
