--- a/src/retrodoro/static/retrodoro/login.css
+++ b/src/retrodoro/static/retrodoro/login.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: 'Retrodoro';
   src: url("ka1.ttf");
@@ -9,19 +15,10 @@ body {
   flex-direction: column;
   height: 100%;
   align-items: center;
-  justify-content: center;
-  background-color: #1f0042;
+  background-color: #300068;
   color: white;
 }
 
-.login-card {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.091);
-  border-radius: 5%;
-  width: 40%;
-  height: 60%;
-}
 
 .logo {
   display: flex;
@@ -29,22 +26,35 @@ body {
   justify-content: center;
   flex: 1;
   font-family: "Retrodoro";
+  font-size: 120%;
+  width: 100%;
+}
+
+.bottom {
+  display: flex;
+  flex: 3;
+  width: 100%;
+  justify-content: center;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 4;
-  width: 100%;
+  width: 60%;
+  height: 80%;
   justify-content: center;
+  box-shadow: inset 0 0 15px rgba(135, 135, 135, .1), 0 0 18px 3px rgba(0, 0, 0, .3);
+  border-radius: 5%;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 40%;
-  background-color: rgb(220, 182, 132);
+}
+
+button {
+  width: 20%;
 }
 
 form input {
