--- a/src/retrodoro/templates/retrodoro/login.html
+++ b/src/retrodoro/templates/retrodoro/login.html
@@ -6,22 +6,22 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="login-card">
     <div class="logo">
       <h1>Retrodoro</h1>
     </div>
 
+    <div class="bottom">
     <div class="form-container">
-      <form action="{% url 'loginuser' %}" method="post">
+      <h2>LOGIN</h2>
+      <form action="{% url 'loginuser' %}" method="post" id="loginform">
         {% csrf_token %}
           <input type="text" class="username" name="username" 
               placeholder="Username" required>
           
           <input type="password" class="password" name="password" 
               placeholder="Password" required>
-          <button type="submit">Submit</button>
       </form>
-      
+      <button type="submit" form="loginform">Submit</button>
     </div>
     </div>
 
