--- a/src/retrodoro/templates/retrodoro/login_page.html
+++ b/src/retrodoro/templates/retrodoro/login_page.html
@@ -13,7 +13,7 @@
     <div class="bottom">
     <div class="form-container">
       <h2>LOGIN</h2>
-      <form action="{% url 'loginuser' %}" method="post" id="loginform">
+      <form action="" method="post" id="loginform">
         {% csrf_token %}
           <input type="text" class="username" name="username" 
               placeholder="Username" required>
